--- a/style/banner.css
+++ b/style/banner.css
@@ -1,27 +1,55 @@
-.banner{ 
-  position: relative;
-  background: #070F19BF;
-  height: 80vh;
+.banner {
+    position: relative;
+    background: #070F19BF;
+    height: 80vh;
 }
-.banner__bg{
+
+.banner__bg {
     position: absolute;
     left: 0;
     z-index: -1;
     top: 0;
     width: 100%;
-    height:100% ;
+    height: 100%;
 }
-.banner__wrap{
+
+.banner__wrap {
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
-.banner__desc{
+
+.banner__desc {
     max-width: 600px;
     width: 100%;
 }
-.banner__btns{
+
+.banner__btns {
     display: flex;
     align-items: center;
     gap: 30px;
+}
+
+@media screen and (max-width: 768px) {
+    .banner__wrap {
+        justify-content: center;
+    }
+
+    .banner__btns {
+        justify-content: center;
+    }
+
+    .banner__desc {
+        text-align: center;
+    }
+
+    .banner__desc-title {
+        font-size: 42px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .banner__desc-title {
+        font-size: 30px;
+    }
 }
