--- a/style/base.css
+++ b/style/base.css
@@ -46,7 +46,7 @@ body {
     font-weight: 500;
     line-height: 12px;
     color: var(--black);
-    transition: 0.3s;
+    transition: 0.3s
 }
 
 .btn:hover {
