--- a/style/banner.css
+++ b/style/banner.css
@@ -30,7 +30,7 @@
     gap: 30px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-widht: 768px) {
     .banner__wrap {
         justify-content: center;
     }
